<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="20dp"
    android:background="@color/light_gray">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="quickreserve.app.HelpActivity"
        android:background="@color/white">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question1"
            android:id="@+id/question1"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/my_button"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="5dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/answer1"
            android:layout_below="@+id/question1"
            android:textSize="16dp"
            android:text="@string/answer1"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:visibility="gone"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question2"
            android:id="@+id/question2"
            android:background="@drawable/my_button"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_below="@+id/answer1"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/answer2"
            android:layout_below="@+id/question2"
            android:textSize="16dp"
            android:text="@string/answer2"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:visibility="gone"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question3"
            android:id="@+id/question3"
            android:background="@drawable/my_button"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_below="@+id/answer2"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/answer3"
            android:layout_below="@+id/question3"
            android:textSize="16dp"
            android:text="@string/answer3"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:visibility="gone"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question4"
            android:id="@+id/question4"
            android:background="@drawable/my_button"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_below="@+id/answer3"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/answer4"
            android:layout_below="@+id/question4"
            android:textSize="16dp"
            android:text="@string/answer4"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:visibility="gone"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question5"
            android:id="@+id/question5"
            android:background="@drawable/my_button"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_below="@+id/answer4"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/answer5"
            android:layout_below="@+id/question5"
            android:textSize="16dp"
            android:text="@string/answer5"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:visibility="gone"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question6"
            android:id="@+id/question6"
            android:background="@drawable/my_button"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_below="@+id/answer5"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/answer6"
            android:layout_below="@+id/question6"
            android:textSize="16dp"
            android:text="@string/answer6"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:visibility="gone"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question7"
            android:id="@+id/question7"
            android:background="@drawable/my_button"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_below="@+id/answer6"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/answer7"
            android:layout_below="@+id/question7"
            android:textSize="16dp"
            android:text="@string/answer7"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:visibility="gone"
            />


    </RelativeLayout>


    </ScrollView>




    <ListView android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode = "none"
        android:divider="@color/light_gray"
        android:dividerHeight="1dp"
        android:background="@color/white"
        />

</android.support.v4.widget.DrawerLayout>

