<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"

    android:background="@color/white"
    android:visibility="visible"
    android:divider="@android:color/black"
    android:dividerPadding="10dp">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/attLogo"
        android:layout_weight="2"
        android:contentDescription="@string/attlogo"
        android:src="@drawable/quickreserve_login"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:background="@color/orange"
        android:baselineAlignBottom="true"
        android:visibility="visible"
        android:cropToPadding="true"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:clickable="false"
        android:visibility="visible"
        android:id="@+id/loginView"
        android:background="@android:color/white"
        android:layout_weight="1">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/userID"
            android:layout_marginTop="10dp"
            android:editable="true"
            android:enabled="true"
            android:textColor="@android:color/black"
            android:hint="@string/ATTUID"
            android:clickable="false"
            android:background="@android:drawable/editbox_background"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:padding="5dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"
            android:layout_below="@+id/userID"
            android:layout_alignLeft="@+id/userID"
            android:layout_alignStart="@+id/userID"
            android:layout_marginTop="10dp"
            android:password="false"
            android:hint="@string/Password"
            android:textColor="@android:color/black"
            android:background="@android:drawable/editbox_background"
            android:padding="5dp" />

        <Button style="@style/MyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            android:id="@+id/loginButton"
            android:layout_below="@+id/password"
            android:layout_alignEnd="@+id/password"
            android:layout_alignStart="@+id/password"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_alignParentBottom="false"
            android:clickable="true"
            android:layout_alignParentEnd="false"
            android:textSize="20dp"
            android:layout_alignParentStart="false"
            android:layout_marginTop="10dp"
            android:padding="5dp" />

    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/tempFrame"
        android:visibility="gone"
        android:background="@android:color/white"
        android:clipToPadding="true"
        android:clickable="false"></FrameLayout>

</LinearLayout>
